[main] Update 2026-02-24.22
Reference commit: db228c09d7
